--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "bootstrap-icons": "^1.7.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.4",
+    "sweetalert2": "^11.3.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
